ATTENTTION_TO_FIX

● Plik nie powstał. Ponawiam agenta §61.

● Agent(Retry generate questions §61) Sonnet 4.6
  ⎿  Backgrounded agent (↓ to manage · ctrl+o to expand)

● Ponowiony agent §61 pracuje w tle. Czekam na zakończenie...

● Agent "Retry generate questions §61" completed

∴ Thinking…

  The agent failed again to write the file. Let me read the prompt file to understand the expected format and write the file myself.

● Agent §61 ponownie nie mógł zapisać pliku. Przeczytam prompt i zapiszę pytania sam.

● Read(.tmp/add-questions-Ir-1/prompt_§61.md)
  ⎿  Read 62 lines

● Read(instructions/Ir-1/sections/§61.md)
  ⎿  Read 144 lines

● Bash(python3 << 'PYEOF'
      import json, uuid

      data = [
        {
          "uuid": str(uuid.uuid4()),
          "question": "Kto wydaje zezwolenie na wyjazd pociągu ze stacji, wjazd na stację lub przejazd przez stację?",
          "answers": {"A": "Dyżurny ruchu", "B": "Kierownik pociągu", "C": "Nastawniczy", "D": "Zwrotniczy"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 1",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Co jest zezwoleniem na wyjazd pociągu, gdy na semaforze wyjazdowym podano sygnał zezwalający na semaforze grupowym i sygnał zastępczy na semaforze przy torze odjazdu?",
          "answers": {"A": "Podanie tych dwóch sygnałów", "B": "Podanie rozkazu pisemnego drużynie pociągowej", "C": "Polecenie dyżurnego ruchu wydane ustnie", "D": "Podanie sygnału Rd 1 „Nakaz jazdy""},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 2 pkt 2",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "W jakiej formie dyżurny ruchu wydaje polecenie odjazdu za pośrednictwem nastawniczego?",
          "answers": {"A": "„Pociąg nr … z toru nr … odjazd"", "B": "„Tor nr … wolny, odjazd"", "C": "„Pociąg nr … zezwalam na wyjazd"", "D": "„Droga wolna dla pociągu nr …""},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 2 pkt 3",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Co jest zezwoleniem na wyjazd pociągu, gdy nie można podać sygnału zezwalającego na semaforze wyjazdowym?",
          "answers": {"A": "Wydanie drużynie pociągowej rozkazu pisemnego", "B": "Podanie sygnału Rd 1 „Nakaz jazdy"", "C": "Polecenie nastawniczego wydane ustnie", "D": "Podanie sygnału zastępczego na semaforze wjazdowym"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 2",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Co jest zezwoleniem na odjazd pociągu, gdy z miejsca odjazdu nie widać wskazań semafora wyjazdowego?",
          "answers": {"A": "Polecenie dyżurnego ruchu przekazane za pomocą urządzeń łączności po nastawieniu sygnału zezwalającego", "B": "Wydanie rozkazu pisemnego drużynie pociągowej", "C": "Podanie sygnału zastępczego na semaforze wyjazdowym", "D":
       "Podanie sygnału Rd 1 „Nakaz jazdy" z nastawni wykonawczej"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 3",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Co jest zezwoleniem na wjazd pociągu na stację, gdy nie można podać sygnału zezwalającego na semaforze wjazdowym?",
          "answers": {"A": "Wydanie drużynie pociągowej rozkazu pisemnego", "B": "Polecenie dyżurnego ruchu wydane ustnie", "C": "Podanie sygnału Rd 1 „Nakaz jazdy"", "D": "Podanie sygnału zastępczego na semaforze wyjazdowym"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 4",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Co stanowi zezwolenie na przejazd pociągu przez posterunek odgałęźny bez semaforów wyjazdowych?",
          "answers": {"A": "Podanie sygnału zezwalającego na semaforze wjazdowym", "B": "Podanie sygnału zezwalającego na semaforze wyjazdowym i wjazdowym", "C": "Podanie sygnału Rd 1 „Nakaz jazdy"", "D": "Wydanie rozkazu pisemnego drużynie
      pociągowej"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 5 pkt 3",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Co stanowi zezwolenie na przejazd pociągu przez posterunek odstępowy?",
          "answers": {"A": "Podanie sygnału zezwalającego na semaforze odstępowym", "B": "Podanie sygnału zezwalającego na semaforze wjazdowym", "C": "Podanie sygnału zastępczego na semaforze wyjazdowym", "D": "Wydanie rozkazu pisemnego drużynie
      pociągowej"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 5 pkt 4",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Co stanowi zezwolenie na przejazd pociągu przez stację z semaforami świetlnymi lub kształtowymi z tarczą ostrzegawczą?",
          "answers": {"A": "Podanie sygnału zezwalającego na semaforze wyjazdowym, wjazdowym oraz drogowskazowym", "B": "Podanie sygnału zezwalającego wyłącznie na semaforze wjazdowym", "C": "Podanie sygnału zastępczego na semaforze wyjazdowym i
      wjazdowym", "D": "Podanie sygnału Rd 1 „Nakaz jazdy" i sygnału zezwalającego na semaforze wjazdowym"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 5 pkt 1",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Kto podaje sygnał Rd 1 „Nakaz jazdy"?",
          "answers": {"A": "Dyżurny ruchu", "B": "Nastawniczy", "C": "Kierownik pociągu", "D": "Maszynista"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 9",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "W jakich okolicznościach nastawniczy może podać sygnał Rd 1 „Nakaz jazdy" z nastawni wykonawczej?",
          "answers": {"A": "Na każdorazowe polecenie dyżurnego ruchu dysponującego", "B": "Samodzielnie, po sprawdzeniu drogi przebiegu", "C": "Na polecenie kierownika pociągu", "D": "Na polecenie maszynisty pociągu oczekującego na wyjazd"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 9",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Kto może wydać zezwolenie na przejazd pociągu obok sygnału „Stój" na obsługiwanym semaforze?",
          "answers": {"A": "Dyżurny ruchu zarządzający tym semaforem", "B": "Każdy dyżurny ruchu na tej stacji", "C": "Nastawniczy obsługujący ten semafor", "D": "Kierownik pociągu po uzgodnieniu z maszynistą"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 13",
          "section_ref": "§ 61"
        },
        {
          "uuid": str(uuid.uuid4()),
          "question": "Czym można zastąpić sygnał Rd 1 „Nakaz jazdy", gdy jego podanie jest doraźnie niemożliwe dla pociągu oczekującego na wyjazd?",
          "answers": {"A": "Poleceniem dyżurnego ruchu wydanym za pomocą urządzeń łączności lub rozkazem pisemnym", "B": "Podaniem sygnału zastępczego na semaforze wyjazdowym", "C": "Ustnym poleceniem nastawniczego", "D": "Podaniem sygnału
      zezwalającego na semaforze wjazdowym"},
          "correct": "A",
          "explanation": "Ir-1 § 61 ust. 11",
          "section_ref": "§ 61"
        }
      ]

      with open("/workspace/webdev/lokotest/questions/.tmp/add-questions-Ir-1/§61.json", "w", encoding="utf-8") as f:
          json.dump(data, f, ensure_ascii=False, indent=2)
          f.write("\n")

      print(f"Zapisano {len(data)} pytań")
      PYEOF)
  ⎿  Error: Exit code 1
       File "<stdin>", line 15
         "answers": {"A": "Podanie tych dwóch sygnałów", "B": "Podanie rozkazu pisemnego drużynie pociągowej", "C": "Polecenie dyżurnego ruchu wydane ustnie", "D": "Podanie sygnału Rd 1 „Nakaz jazdy""},
                                                                                                                                                                                                       ^
     SyntaxError: unterminated string literal (detected at line 15)

       File "<stdin>", line 15
         "answers": {"A": "Podanie tych dwóch sygnałów", "B": "Podanie rozkazu pisemnego drużynie pociągowej", "C": "Polecenie dyżurnego ruchu wydane ustnie", "D": "Podanie sygnału Rd 1 „Nakaz jazdy""},
                                                                                                                                                                                                       ^
     SyntaxError: unterminated string literal (detected at line 15)

∴ Thinking…

  The issue is with Polish quotation marks „" inside the Python strings. I need to escape them or use different quotes.

● Polish quotation marks causing issues. Let me fix that.

· Bloviating… (60s · ↓ 1.9k tokens · thinking)
  ⎿  Tip: Run claude --continue or claude --resume to resume a conversation
